finish m2,3
